--- a/Project2/README
+++ b/Project2/README
@@ -1,4 +1,5 @@
-Created an interactive graphical interface using JavaScript, D3.js, HTML, and CSS allowing users to select and view different graphical representations showing the value of one dollar against other currencies
+Created an interactive graphical interface using JavaScript, D3.js, HTML, and CSS allowing users to select 
+and view different graphical representations showing the value of one dollar against other currencies
 
 
 Link to the project: https://codepen.io/mariam-hassan2/pen/RwOERbm
