--- a/Project1/README
+++ b/Project1/README
@@ -1,4 +1,5 @@
 #Form project
-
+Created an interface web application form that collects information for hotel reservations using HTML, CSS, and Javascript;
+Used Bootstrap for implementing data pickers, radio buttons, and text boxes
 
 Link to the project: https://codepen.io/mariam-hassan2/pen/QWPGXGb
