--- a/Project2/README
+++ b/Project2/README
@@ -5,4 +5,6 @@ and view different graphical representations showing the value of one dollar aga
 Link to the project: https://codepen.io/mariam-hassan2/pen/RwOERbm
 
 
+[<img src="/path/to/picture1.png" alt="Alt text" title="Optional title">
+]
 
